--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "uuid": "^9.0.0",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
     "pdfmake": "^0.2.7",
